2013-06-09  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Add command line option `-H' to select hinting engine.

	* src/ttdebug.c: Include FT_TRUETYPE_DRIVER_H.
	(default_version, alternative_version): New global variables.
	(Usage): Updated.
	(main): Handle option `-H'.

2013-06-09  Werner Lemberg  <wl@gnu.org>

	[ftview] Fix cache handling.

	* src/ftview.c (event_cff_hinting_engine_change,
	event_tt_interpreter_version_change): Reset the cache to flush the
	glyph image cache.  Otherwise, the cache lookup functions get
	confused since info about module properties is not stored in the
	glyph cache nodes.

2013-06-03  Werner Lemberg  <wl@gnu.org>

	[ftview, ftdiff, ftbench] Update CFF and TT property handling.

	* src/ftbench.c (main): Make option `-H' use the non-default
	properties and warning if there is a problem.

	* src/ftdiff (render_state_init): At startup, use default
	properties.
	(process_event) <'H'>: Do nothing if non-default `hinting-engine'
	property is not available.

	* src/ftview.c (event_cff_hinting_engine_change): Do nothing if
	non-default `hinting-engine' property is not avaiable.
	(Process_Event) <'H'>: Updated.
	(main): At startup, use default properties.

2013-05-22  Behdad Esfahbod  <behdad@google.com>

	Add support for color glyphs.

	In ftview, key `c' toggles color, while use of sbits cache is now
	mapped to key `C'.

	The premultiplied bgra blending is still off.

	* graph/gblany.h (_gblender_blit_bgra_): New template.
	* graph/graph.h (grPixelMode): Add gr_pixel_mode_bgra.
	* graph/gblblit.h (GBlenderSourceFormat): Add GBLENDER_SOURCE_BGRA.
	* graph/gblblit.c (gblender_blit_init): Handle GBLENDER_SOURCE_BGRA.
	* graph/grblit.c (grBlitGlyphToBitmap): Updated.
	* graph/gblbgra.h: New header file.

	* src/ftcommon.h (FTDemo_Handle): New member `color'.
	* src/ftcommon.c (FTDemo_New, FTDemo_Update_Current_Flags): Updated.
	(FTDemo_Glyph_To_Bitmap): Handle FT_PIXEL_MODE_BGRA.

	* src/ftview.c (Process_Event) <'c'>: Handle color.